Fix table perspective issues vol. 5 #LMR-1107
* truncate long values in linked document hints
* fix error when creating view cursor in table
* fix not existing table when creating table part
* add context menu to collapsed table cell
* do not use document suggestion on Esc keypress
* switch table parts if first empty

Fixes LUMEERIO-45 LUMEERIO-46

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,10 @@ ul {
   list-style-type: none;
 }
 
+.cursor-default {
+  cursor: default;
+}
+
 .cursor-pointer {
   cursor: pointer;
 
